bugfix (non-responsive header): The issue where the top was misaligned when accessed via mobile devices has been resolved.

--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@
   }
 
   #inicio .topo {
-    height: 76px;
+    height: 80;
     background: #fff;
     border-bottom: 1px solid var(--line);
     display: flex;
